# simple_async_command_manager

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  generate_package_docfiles.py  index.md
docs/source/_templates/: example_package.md
docs/source/auto_api_docs/: modules.rst  simple_async_command_manager.commands.command_bases.rst  simple_async_command_manager.commands.shared_commands.rst  simple_async_command_manager.event_handlers.rst  simple_async_command_manager.event_handlers.stdin_event_handler.rst
docs/source/hi/: simple_async_command_manager.commands.rst  simple_async_command_manager.rst
examples/: basic_usage.py  example_telegram_bot_event_handler_usage.py
simple_async_command_manager/commands/: command_bases.py  profiled_command_bases.py  shared_commands.py
simple_async_command_manager/event_handlers/: stdin_event_handler.py
simple_async_command_manager/ext/: telegram_bot_event_handler.py
tests/commands/: test_command_bases.py
tests/event_handlers/: test_stdin_event_handler.py
